--- a/.gitignore
+++ b/.gitignore
@@ -52,11 +52,11 @@ Thumbs.db
 *.tfstate
 *.tfstate.*
 
-# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
-# .tfvars files are managed as part of configuration and so should be included in
+# Ignore any .terraform.tfvars files that are generated automatically for each Terraform run. Most
+# .terraform.tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
-# example.tfvars
+# example.terraform.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
