--- a/.github/workflows/terraform-validate.yaml
+++ b/.github/workflows/terraform-validate.yaml
@@ -2,7 +2,7 @@ name: terraform validate
 on:
   - pull_request
 jobs:
-  docs:
+  validate:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
